2008-09-25  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add option [encoding: UTF-8].

2008-09-23  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/utility.cc:
	* src/utility.h:
	Fix #12347 : Wrong line length and characters per second. 
	patch by John D. (spirit)

2008-09-23  kitone  <kitone@gna.org>

	* src/GtkUtility.cc:
	* src/GtkUtility.h:
	* src/gui/SpinButtonTime.cc:
	* src/gui/SpinButtonTime.h:
	* src/Makefile.am:
	Move GtkUtility code to gui/SpinButtonTime.
	
	* src/actions/MoveSubtitles.cc:
	* src/actions/ScaleSubtitles.cc:
	Update include SpinButtonTime.

2008-09-23  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/gui/Application.cc:
	* src/gui/MenuBar.cc:
	* src/gui/MenuBar.h:
	Remove deprecated code. Cleanup code.

2008-09-23  kitone  <kitone@gna.org>

	* src/actions/preferences/DocumentPage.h:
	* src/actions/preferences/InterfacePage.h:
	* src/actions/preferences/PreferencePage.h:
	* src/actions/preferences/PreferencesPlugin.cc:
	* src/actions/preferences/PreviewPage.h:
	* src/actions/preferences/TimingPage.h:
	* src/actions/preferences/VideoPlayerPage.h:
	* src/actions/preferences/WaveformPage.h:
	New files.

	* share/glade/dialog-preferences.glade:
	* src/Makefile.am:
	* src/gui/MenuBar.cc:
	* src/gui/MenuBar.h:
	Move dialog Preferences code to src/actions/preferences/* as plugin.
	Remove deprecated code. 

	* src/gui/PreferencesUI.cc:
	* src/gui/PreferencesUI.h:
	Delete files.

2008-09-23  kitone  <kitone@gna.org>

	* src/gui/MenuBar.cc:
	* src/main.cc:
	Remove deprecated code.

2008-09-23  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-09-21  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.24.0 release.

2008-09-20  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	* src/actions/errorchecking/MaxCharactersPerLine.h:
	* src/actions/errorchecking/MaxLinePerSubtitle.h:
	* src/actions/errorchecking/MinDisplayTime.h: