@@ -25,32 +25,79 @@
 
 #include "PreferencePage.h"
 
-struct t_output
+/*
+ *
+ */
+class ComboBoxOutput : public Gtk::ComboBox
 {
-	const gchar *label;
-	const gchar *name;
+	class Column : public Gtk::TreeModel::ColumnRecord
+	{
+	public:
+		Column()
+		{
+			add(label);
+			add(name);
+		}
+		Gtk::TreeModelColumn<Glib::ustring> label; // human label
+		Gtk::TreeModelColumn<Glib::ustring> name; // internal name
+	};
+
+public:
+	/*
+	 */
+	ComboBoxOutput(BaseObjectType *cobject, const Glib::RefPtr<Gnome::Glade::Xml>& xml)
+	:Gtk::ComboBox(cobject)
+	{
+		m_model = Gtk::ListStore::create(m_column);
+		set_model(m_model);
+
+		Gtk::CellRendererText *renderer = manage(new Gtk::CellRendererText);
+		pack_start(*renderer, true);
+		add_attribute(*renderer, "text", 0);
+	}
+
+	/*
+	 */
+	void append_output(const Glib::ustring &label, const Glib::ustring &name)
+	{
+		Gtk::TreeIter it = m_model->append();
+		(*it)[m_column.label] = label;
+		(*it)[m_column.name] = name;
+	}
+
+	/*
+	 */
+	void set_active_name(const Glib::ustring &name)
+	{
+		Gtk::TreeIter it = m_model->children().begin();
+		for(it; it; ++it)
+		{
+			if((*it)[m_column.name] == name)
+			{
+				set_active(it);
+				return;
+			}
+		}
+	}
+
+	/*
+	 */
+	Glib::ustring get_active_name()
+	{
+		Gtk::TreeIter it = get_active();
+		if(it)
+			return (*it)[m_column.name];
+		return Glib::ustring();
+	}
+protected:
+	Column m_column;
+	Glib::RefPtr<Gtk::ListStore> m_model;
 };
 
-t_output m_audio_output[]={
-	{N_("Autodetect"), "autoaudiosink"},
-	{N_("ALSA - Advanced Linux Sound Architecture"), "alsasink"},
-	{N_("ESD - Enlightenment Sound Daemon"), "esdsink"},
-	{N_("OSS - Open Sound System"), "ossink"},
-	{N_("SDL - Simple DirectMedia Layer"), "sdlaudiosink"},
-	{N_("GConf"), "gconfaudiosink"},
-	{NULL, NULL}
-};
 
-t_output m_video_output[]={
-	{N_("Autodetect"), "autovideosink"},
-	{N_("X Window System (X11/XShm/Xv)"), "xvimagesink"},
-	{N_("X Window System (No Xv)"), "ximagesink"},
-	{N_("SDL - Simple DirectMedia Layer"), "sdlvideosink"},
-	{N_("GConf"), "gconfvideosink"},
-	{N_("OpenGL"), "glimagesink"},
-	{NULL, NULL}
-};
-
+/*
+ *
+ */
 class VideoPlayerPage : public PreferencePage
 {
 public:
@@ -68,25 +115,31 @@ public:
 		init_widget(xml, "check-force-aspect-ratio", "video-player", "force-aspect-ratio");
 		init_widget(xml, "check-automatically-open-video", "video-player", "automatically-open-video");
 
+		// outputs
 		xml->get_widget_derived("combo-audio-output", m_comboAudioOutput);
 		xml->get_widget_derived("combo-video-output", m_comboVideoOutput);
 
-		for(unsigned int i=0; m_audio_output[i].label != NULL; ++i)
-		{
-			m_comboAudioOutput->append_text(m_audio_output[i].label);
-		}
+		// audio output
+		m_comboAudioOutput->append_output(_("Autodetect"), "autoaudiosink");
+		m_comboAudioOutput->append_output(_("ALSA - Advanced Linux Sound Architecture"), "alsasink");
+		m_comboAudioOutput->append_output(_("ESD - Enlightenment Sound Daemon"), "esdsink");
+		m_comboAudioOutput->append_output(_("OSS - Open Sound System"), "ossink");
+		m_comboAudioOutput->append_output(_("SDL - Simple DirectMedia Layer"), "sdlaudiosink");
+		m_comboAudioOutput->append_output(_("GConf"), "gconfaudiosink");
 
-		for(unsigned int i=0; m_video_output[i].label != NULL; ++i)
-		{
-			m_comboVideoOutput->append_text(m_video_output[i].label);
-		}
+		// video output
+		m_comboVideoOutput->append_output(_("Autodetect"), "autovideosink");
+		m_comboVideoOutput->append_output(_("X Window System (X11/XShm/Xv)"), "xvimagesink");
+		m_comboVideoOutput->append_output(_("X Window System (No Xv)"), "ximagesink");
+		m_comboVideoOutput->append_output(_("SDL - Simple DirectMedia Layer"), "sdlvideosink");
+		m_comboVideoOutput->append_output(_("GConf"), "gconfvideosink");
+		m_comboVideoOutput->append_output(_("OpenGL"), "glimagesink");
 
-		Glib::ustring audiosink, videosink;
-		Config::getInstance().get_value_string("video-player", "audio-sink", audiosink);
-		Config::getInstance().get_value_string("video-player", "video-sink", videosink);
+		Glib::ustring audiosink = Config::getInstance().get_value_string("video-player", "audio-sink");
+		Glib::ustring videosink = Config::getInstance().get_value_string("video-player", "video-sink");
 
-		m_comboAudioOutput->set_active_text(get_output_label_by_name(m_audio_output, audiosink));
-		m_comboVideoOutput->set_active_text(get_output_label_by_name(m_video_output, videosink));
+		m_comboAudioOutput->set_active_name(audiosink);
+		m_comboVideoOutput->set_active_name(videosink);
 
 		m_comboAudioOutput->signal_changed().connect(
 				sigc::mem_fun(*this, &VideoPlayerPage::on_audio_output_changed));
@@ -96,41 +149,20 @@ public:
 	
 protected:
 
-	Glib::ustring get_output_label_by_name(t_output output[], const Glib::ustring &name)
-	{
-		for(unsigned int i=0; output[i].name != NULL; ++i)
-		{
-			if(name == output[i].name)
-				return _(output[i].label);
-		}
-		return Glib::ustring();
-	}
-
-	Glib::ustring get_output_name_by_label(t_output output[], const Glib::ustring &label)
-	{
-		for(unsigned int i=0; output[i].name != NULL; ++i)
-		{
-			if(label == _(output[i].label))
-				return output[i].name;
-		}
-		return Glib::ustring();
-	}
-
 	void on_audio_output_changed()
 	{
-		Glib::ustring name = get_output_name_by_label(m_audio_output, m_comboAudioOutput->get_active_text());
+		Glib::ustring name = m_comboAudioOutput->get_active_name();
 		Config::getInstance().set_value_string("video-player", "audio-sink", name);
 	}
 
 	void on_video_output_changed()
 	{
-		Glib::ustring name = get_output_name_by_label(m_video_output, m_comboVideoOutput->get_active_text());
+		Glib::ustring name = m_comboVideoOutput->get_active_name();
 		Config::getInstance().set_value_string("video-player", "video-sink", name);
 	}
-
 protected:
-	ComboBoxText*	m_comboAudioOutput;
-	ComboBoxText*	m_comboVideoOutput;
+	ComboBoxOutput*	m_comboAudioOutput;
+	ComboBoxOutput*	m_comboVideoOutput;
 };
 
 #endif//_VideoPlayerPage_h
