@@ -1,5 +1,10 @@
 2008-09-25  kitone  <kitone@gna.org>
 
+	* src/actions/preferences/VideoPlayerPage.h:
+	Fix: ComboBox output bug (translation).
+
+2008-09-25  kitone  <kitone@gna.org>
+
 	* prepare-po.sh:
 	Add option [encoding: UTF-8].
 
